--- a/SouthDakotaDiaspora/Site/Views/Games/Edit.cshtml
+++ b/SouthDakotaDiaspora/Site/Views/Games/Edit.cshtml
@@ -6,24 +6,24 @@
 
 @*DATE AND TIME PICKER*@
 @*@section Scripts {
-    @Scripts.Render("~/bundles/jqueryui")
-    @Styles.Render("~/Content/cssjqryUi")
-    @Scripts.Render("~/bundles/jquerytimepicker")
-    @Styles.Render("~/Content/jquerytimepicker")
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('input[type=datetime]').datetimepicker({
-                timeFormat: 'HH:mm z',
-                timezoneList: [
-                    { value: -300, label: 'Eastern' },
-                    { value: -360, label: 'Central' },
-                    { value: -420, label: 'Mountain' },
-                    { value: -480, label: 'Pacific' }
-                ]
+        @Scripts.Render("~/bundles/jqueryui")
+        @Styles.Render("~/Content/cssjqryUi")
+        @Scripts.Render("~/bundles/jquerytimepicker")
+        @Styles.Render("~/Content/jquerytimepicker")
+        <script type="text/javascript">
+            $(document).ready(function () {
+                $('input[type=datetime]').datetimepicker({
+                    timeFormat: 'HH:mm z',
+                    timezoneList: [
+                        { value: -300, label: 'Eastern' },
+                        { value: -360, label: 'Central' },
+                        { value: -420, label: 'Mountain' },
+                        { value: -480, label: 'Pacific' }
+                    ]
+                });
             });
-        });
-    </script>
-}*@
+        </script>
+    }*@
 
 
 @*DATE PICKER (No time)*@
@@ -41,56 +41,65 @@
 }
 
 <h2>Edit</h2>
-
-@using (Html.BeginForm("Edit", "Games", FormMethod.Get, new { @autocomplete = "off" }))
+@if (Session["UserID"] == null)
 {
-    @Html.AntiForgeryToken()
-
-    <div class="form-horizontal">
-        <h4>Game</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Platform, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.Platform, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Platform, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ReleaseDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ReleaseDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ReleaseDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
+    <p>
+        @Html.ActionLink("Please log in to contribute", "Login", "Home")
+    </p>
 }
+else
+{
+    using (Html.BeginForm("Edit", "Games", FormMethod.Post, new { @autocomplete = "off" }))
+    {
+        @Html.AntiForgeryToken()
+
+        <div class="form-horizontal">
+            <h4>Game</h4>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.Id)
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Platform, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EnumDropDownListFor(model => model.Platform, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Platform, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.ReleaseDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.ReleaseDate, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.ReleaseDate, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Save" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
+    }
+}
+
 
 <div>
     @Html.ActionLink("Back to List", "Index")
