--- a/SouthDakotaDiaspora/Site/Views/Home/Create.cshtml
+++ b/SouthDakotaDiaspora/Site/Views/Home/Create.cshtml
@@ -4,15 +4,13 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Create User</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>User</h4>
-        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -54,6 +52,3 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Login Page", "Login")
-</div>
