--- a/SouthDakotaDiaspora/Site/Views/Shared/_Layout.cshtml
+++ b/SouthDakotaDiaspora/Site/Views/Shared/_Layout.cshtml
@@ -10,25 +10,48 @@
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
+
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("South Dakota Diaspora", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @if (Session["UserID"] == null)
+                {
+                    <div>
+                        @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                        @Html.ActionLink("Create Account", "Create", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                        @Html.ActionLink("Log In", "Login", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                    </div>
+                }
+                else
+                {
+                    <div>
+                        @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                        @Html.ActionLink(Session["Username"].ToString(), "Details", "Users", new { area = "", id = Session["UserID"].ToString() }, new { @class = "navbar-brand" })
+                        @Html.ActionLink("Log Out", "Logout", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                    </div>
+                }
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Timeline", "Index", "Timeline")</li>
-                    <li>@Html.ActionLink("Users", "Index", "Users")</li>
-                    <li>@Html.ActionLink("Games", "Index", "Games")</li>
-                    <li>@Html.ActionLink("Shows/Videos", "Index", "Shows")</li>
-                    <li>@Html.ActionLink("Books/Articles", "Index", "Books")</li>
-                    <li>@Html.ActionLink("Projects", "Index", "Projects")</li>
+                    <li>@Html.ActionLink("⏱Timeline", "Index", "Timeline")</li>
+                    <li>@Html.ActionLink("🧙‍Users", "Index", "Users")</li>
+                    <li>@Html.ActionLink("🎲Games", "Index", "Games")</li>
+                    <li>@Html.ActionLink("📺Shows/Videos", "Index", "Shows")</li>
+                    <li>@Html.ActionLink("📚Books/Articles", "Index", "Books")</li>
+                    <li>@Html.ActionLink("🧪Projects", "Index", "Projects")</li>
                 </ul>
             </div>
         </div>
+    </div>
+    <div>
+        @while (Site.Helpers.GlobalMethods.NumberConfirmationMessages(this.Session) > 0)
+        {
+            string message = Site.Helpers.GlobalMethods.DequeueConfirmationMessage(this.Session);
+            <div class = "confirmation-messages">@message</div>
+        }
     </div>
     <div class="container body-content">
         @RenderBody()
