--- a/SouthDakotaDiaspora/Site/Content/Site.css
+++ b/SouthDakotaDiaspora/Site/Content/Site.css
@@ -1,12 +1,14 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color: #D9DAFF;
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    background-color: #D9DAFF;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
