--- a/SouthDakotaDiaspora/Site/Views/Shared/_Layout.cshtml
+++ b/SouthDakotaDiaspora/Site/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @if (Session["UserID"] == null)
+                @if (!Site.Helpers.GlobalMethods.IsLoggedIn(this.Session))
                 {
                     <div>
                         @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
@@ -36,12 +36,26 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("⏱Timeline", "Index", "Timeline")</li>
-                    <li>@Html.ActionLink("🧙‍Users", "Index", "Users")</li>
-                    <li>@Html.ActionLink("🎲Games", "Index", "Games")</li>
-                    <li>@Html.ActionLink("📺Shows/Videos", "Index", "Shows")</li>
-                    <li>@Html.ActionLink("📚Books/Articles", "Index", "Books")</li>
-                    <li>@Html.ActionLink("🧪Projects", "Index", "Projects")</li>
+                    @if (ViewContext.RouteData.Values["controller"]?.ToString() == "Timeline")
+                    {
+                        <li style="width: 26px"><a href="@Url.Action("create")"><span class="plusbutton" /></a></li>
+                    }
+                    <li>@Html.ActionLink("Timeline ⌚", "Index", "Timeline")</li>
+
+                    @if (ViewContext.RouteData.Values["controller"]?.ToString() == "Users")
+                    {
+                        <li style="width: 26px"><a href="@Url.Action("create")"><span class="plusbutton" /></a></li>
+                    }
+                    <li>@Html.ActionLink("Users 🧙‍", "Index", "Users")</li>
+
+                    @if (ViewContext.RouteData.Values["controller"]?.ToString() == "Games")
+                    {
+                        <li style="width: 26px"><a href="@Url.Action("create")"><span class="plusbutton" /></a></li>
+                    }
+                    <li>@Html.ActionLink("Games 🎲", "Index", "Games")</li>
+                    <li>@Html.ActionLink("Shows/Videos 📺", "Index", "Shows")</li>
+                    <li>@Html.ActionLink("Books/Articles 📚", "Index", "Books")</li>
+                    <li>@Html.ActionLink("Projects 🧪", "Index", "Projects")</li>
                 </ul>
             </div>
         </div>
