--- a/SouthDakotaDiaspora/Site/Views/Timeline/Index.cshtml
+++ b/SouthDakotaDiaspora/Site/Views/Timeline/Index.cshtml
@@ -7,22 +7,25 @@
 
 <table class="timeline-table table" style="text-align: center;">
 
-    <!-- Events Events -->
+    @* HEADERS *@
+    <tr class="timeline-head"><td><h3></h3></td><td>Duration</td><td>Activity</td><td>Attending</td><td></td></tr>
+
+    <!-- Past Events -->
     <tr class="timeline-prev"><td><h3>Previous</h3></td><td></td><td></td><td></td><td></td></tr>
     @foreach (var item in Model.PastEvents)
     {
         <tr class="timeline-prev">
             <td>
-                @Html.DisplayFor(modelItem => item.StartTime)
+                @Html.DisplayFor(modelItem => item.StartTimeDisplay)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.EndTime)
+                @Html.DisplayFor(modelItem => item.Duration)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Title)
+                @Html.DisplayFor(modelItem => item.Platform)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Host)
+                @Html.DisplayFor(modelItem => item.Attending)
             </td>
             <td>
                 @Html.ActionLink("Details", "Details", new { id = item.Id })
@@ -36,26 +39,28 @@
     {
         <tr class="timeline-today">
             <td>
-                @Html.DisplayFor(modelItem => item.StartTime)
+                @Html.DisplayFor(modelItem => item.StartTimeDisplay)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.EndTime)
+                @Html.DisplayFor(modelItem => item.Duration)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Title)
+                @Html.DisplayFor(modelItem => item.Platform)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Host)
+                @Html.DisplayFor(modelItem => item.Attending)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                 @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                @using (Html.BeginForm("Delete", "Timeline", new { id = item.Id }, FormMethod.Post, new { @class = "buttonless-button" }))
+                {
+                    @Html.AntiForgeryToken()
+                    <input class="timeline-today buttonless-button" type="submit" value="Delete" />
+                }
             </td>
         </tr>
     }
-
-
 
     <!-- Future Events -->
     <tr class="timeline-future"><td><h3>Later</h3></td><td></td><td></td><td></td><td></td></tr>
@@ -63,25 +68,29 @@
     {
         <tr class="timeline-future">
             <td>
-                @Html.DisplayFor(modelItem => item.StartTime)
+                @Html.DisplayFor(modelItem => item.StartTimeDisplay)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.EndTime)
+                @Html.DisplayFor(modelItem => item.Duration)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Title)
+                @Html.DisplayFor(modelItem => item.Platform)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Host)
+                @Html.DisplayFor(modelItem => item.Attending)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                 @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                @using (Html.BeginForm("Delete", "Timeline", new { id = item.Id }, FormMethod.Post, new { @class = "buttonless-button" }))
+                {
+                    @Html.AntiForgeryToken()
+                    <input class="timeline-future buttonless-button" type="submit" value="Delete" />
+                }
+
             </td>
         </tr>
     }
-
 </table>
 
 
