--- a/SouthDakotaDiaspora/Site/Views/Home/LogoutSuccess.cshtml
+++ b/SouthDakotaDiaspora/Site/Views/Home/LogoutSuccess.cshtml
@@ -4,9 +4,11 @@
 }
 
 <h2>Logout Success</h2>
-You were successfully logged out.
-<br />
-<div>
+<div style="text-align: center;">
+    <p>You were successfully logged out.</p>
+    <br />
     @Html.ActionLink("Return Home", "Index")
+
 </div>
+
 
