--- a/SouthDakotaDiaspora/Site/Views/Users/Index.cshtml
+++ b/SouthDakotaDiaspora/Site/Views/Users/Index.cshtml
@@ -32,39 +32,31 @@
 
     @foreach (Data.Models.User item in Model)
     {
-<tr style="@(Session["UserID"] != null && item.Id.ToString() == Session["UserID"].ToString() ? "font-weight: 600" : "")">
-    <td>
-        @Html.DisplayFor(modelItem => item.Username)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.FirstName)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.LastName)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.UserRole)
-    </td>
-    <td>
-        @Html.ActionLink("Info", "Details", new { id = item.Id })
+        <tr class="clickable-row" onclick="location.href ='@Url.Action("Details", new { id = item.Id})'" style="@(Session["UserID"] != null && item.Id.ToString() == Session["UserID"].ToString() ? "font-weight: 600" : "")">
+            <td>
+                @Html.DisplayFor(modelItem => item.Username)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.UserRole)
+            </td>
+            <td>
+                @if ((Session["Role"] != null && Session["Role"].ToString() == Data.Models.UserRoleType.Admin.ToString() && // You are an admin AND
+                        item.UserRole != Data.Models.UserRoleType.Admin) || // This person is a contributor
 
-        @if (Session["UserID"] != null && item.Id.ToString() == Session["UserID"].ToString() ||
-            (Session["Role"] != null && Session["Role"].ToString() == Data.Models.UserRoleType.Admin.ToString() && item.UserRole == Data.Models.UserRoleType.Contributor))
-        {
-            @Html.ActionLink("Edit", "Edit", new { id = item.Id })
-        }
+                    // OR
 
-        @if ((Session["Role"] != null && Session["Role"].ToString() == Data.Models.UserRoleType.Admin.ToString() && // You are an admin AND
-                item.UserRole != Data.Models.UserRoleType.Admin) || // This person is a contributor
-
-            // OR
-
-            (Session["UserID"] != null && item.Id.ToString() == Session["UserID"].ToString())) // You are yourself
-        {
-            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-        }
-    </td>
-</tr>
+                    (Session["UserID"] != null && item.Id.ToString() == Session["UserID"].ToString())) // You are yourself
+                {
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                }
+            </td>
+        </tr>
     }
 
 </table>
