Discord Notifier and Package Updates
+ Moved startup and dependency injection to Site\SiteStartup.cs
+ Updated libraries
+ Installed hangfire for recurring scheduled tasks
+ Updated TimelineEvent model to have notification columns
+ New discord notifier using hangfire sends messages to discord for any TimelineEvents that have not yet sent out notifications
+ Set up discord web hook
+ Tested with live discord server web hook

--- a/SouthDakotaDiaspora/Site/Content/themes/custom/Diaspora.css
+++ b/SouthDakotaDiaspora/Site/Content/themes/custom/Diaspora.css
@@ -33,6 +33,10 @@
     font-family: Caroni-Regular;
 }
 
+.header-selected {
+    filter: brightness(25%);
+}
+
 
 /* ADD NEW BUTTON */
 .plus-link {
